bin_PROGRAMS = alvar
alvar_SOURCES =      \
  parametersmod.f90  \
  errormod.f90       \
  coordsmod.f90      \
  geohashmod.f90     \
  statsmod.f90       \
	utilitiesmod.f90	 \
	newsplinemod.f90 	 \
	orbitmod.f90 			 \
	daylengthmod.f90 	 \
	metvarsmod.f90		 \
	soilstatemod.f90   \
	soilphysicsmod.f90 \
	diurnaltempmod.f90 \
	radiationmod.f90 	 \
	randomdistmod.f90  \
	weathergenmod.f90  \
	hourlyprecmod.f90  \
	aetalphamod.f90    \
	biome1mod.f90			 \
	hydrologymod.f90   \
	gppmod.f90         \
	fireindexmod.f90   \
  getdatamod.f90     \
  outputmod.f90      \
	netcdfinputmod.f90 \
	netcdfoutputmod.f90\
  gwgenmod.f90			 \
	gwgenmodnew.f90    \
	drivermod.f90 		 \
	modelmod.f90 			 \
	main.f90
clean-local:
	rm -r -f *.mod *.dSYM
