bin_PROGRAMS = alvar
alvar_SOURCES =        \
  parametersmod.f90    \
	mpivarsmod.f90       \
	pftparmod.f90        \
  errormod.f90         \
  coordsmod.f90        \
  geohashmod.f90       \
  statsmod.f90         \
	utilitiesmod.f90	   \
  getdatamod.f90       \
	randomdistmod.f90    \
	orbitmod.f90         \
	statevarsmod.f90	   \
	outputmod.f90        \
	soilstatemod.f90     \
	daylengthmod.f90     \
	diurnaltempmod.f90   \
	radiationmod.f90     \
	radfluxmod.f90       \
	latsensfluxmod.f90   \
	soilphasechgmod.f90  \
	soilphysicsmod.f90   \
	hourlyprecmod.f90    \
	newsplinemod.f90     \
	weathergenmod.f90    \
	gwgenmodnew.f90      \
	establishmentmod.f90 \
	phenologymod.f90     \
	soilhydrologymod.f90 \
	waterbalancemod.f90  \
	snowhydrologymod.f90 \
	gppmod.f90           \
	nppmod.f90           \
	lightmod.f90         \
	turnovermod.f90      \
	allocationmod.f90    \
	rootmod.f90          \
	killplantmod.f90     \
	mortalitymod.f90     \
	averagemod.f90       \
	netcdfinputmod.f90   \
	netcdfoutputmod.f90  \
	printgridmod.f90		 \
	initmod.f90		 		   \
	alvarmod.f90         \
	alvarmod_daily.f90   \
	drivermod.f90 		   \
	main.f90
clean-local:
	rm -r -f *.mod *.dSYM
